quiz angles 1 diagram stopped overlapping with input and check boxes

--- a/src/Lessons/Math/RelatedAngles/quiz/style.scss
+++ b/src/Lessons/Math/RelatedAngles/quiz/style.scss
@@ -1,7 +1,7 @@
 @import '../common/style';
 
 .lesson__quiz_input {
-  width: 70px;
+  width: calc(var(--lesson__diagram-font-size) * 3);
 }
 
 .diagram__html {
